; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/user32/extr_cursoricon.c_check_DrawState_Color.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/user32/extr_cursoricon.c_check_DrawState_Color.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DST_ICON = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [159 x i8] c"DrawState drawing Icon with Overlaying Mask %d on Color %06X with flags %08X. Expected a close match to %06X (modern) or %06X (legacy). Got %06X from line %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32, i32, i32, i32, i32, i32, i32, i32)* @check_DrawState_Color to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_DrawState_Color(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6, i32 %7, i32 %8, i32 %9) #0 {
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i64, align 8
  store i32 %0, i32* %11, align 4
  store i32 %1, i32* %12, align 4
  store i32 %2, i32* %13, align 4
  store i32 %3, i32* %14, align 4
  store i32 %4, i32* %15, align 4
  store i32 %5, i32* %16, align 4
  store i32 %6, i32* %17, align 4
  store i32 %7, i32* %18, align 4
  store i32 %8, i32* %19, align 4
  store i32 %9, i32* %20, align 4
  %23 = load i32, i32* %11, align 4
  %24 = load i32, i32* %14, align 4
  %25 = load i32, i32* %12, align 4
  %26 = call i64 @create_test_icon(i32 %23, i32 1, i32 1, i32 %24, i32 %25, i32* %13, i32 4)
  store i64 %26, i64* %22, align 8
  %27 = load i64, i64* %22, align 8
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %30, label %29

29:                                               ; preds = %10
  br label %67

30:                                               ; preds = %10
  %31 = load i32, i32* %11, align 4
  %32 = load i32, i32* %17, align 4
  %33 = call i32 @SetPixelV(i32 %31, i32 1, i32 1, i32 %32)
  %34 = load i32, i32* %11, align 4
  %35 = load i32, i32* %15, align 4
  %36 = load i64, i64* %22, align 8
  %37 = trunc i64 %36 to i32
  %38 = load i32, i32* @DST_ICON, align 4
  %39 = load i32, i32* %16, align 4
  %40 = or i32 %38, %39
  %41 = call i32 @DrawStateA(i32 %34, i32 %35, i32* null, i32 %37, i32 0, i32 1, i32 1, i32 0, i32 0, i32 %40)
  %42 = load i32, i32* %11, align 4
  %43 = call i32 @GetPixel(i32 %42, i32 1, i32 1)
  store i32 %43, i32* %21, align 4
  %44 = load i32, i32* %21, align 4
  %45 = load i32, i32* %18, align 4
  %46 = call i64 @color_match(i32 %44, i32 %45)
  %47 = icmp ne i64 %46, 0
  br i1 %47, label %54, label %48

48:                                               ; preds = %30
  %49 = load i32, i32* %21, align 4
  %50 = load i32, i32* %19, align 4
  %51 = call i64 @color_match(i32 %49, i32 %50)
  %52 = call i64 @broken(i64 %51)
  %53 = icmp ne i64 %52, 0
  br label %54

54:                                               ; preds = %48, %30
  %55 = phi i1 [ true, %30 ], [ %53, %48 ]
  %56 = zext i1 %55 to i32
  %57 = load i32, i32* %12, align 4
  %58 = load i32, i32* %13, align 4
  %59 = load i32, i32* @DST_ICON, align 4
  %60 = load i32, i32* %16, align 4
  %61 = or i32 %59, %60
  %62 = load i32, i32* %18, align 4
  %63 = load i32, i32* %19, align 4
  %64 = load i32, i32* %21, align 4
  %65 = load i32, i32* %20, align 4
  %66 = call i32 @ok(i32 %56, i8* getelementptr inbounds ([159 x i8], [159 x i8]* @.str, i64 0, i64 0), i32 %57, i32 %58, i32 %61, i32 %62, i32 %63, i32 %64, i32 %65)
  br label %67

67:                                               ; preds = %54, %29
  ret void
}

declare dso_local i64 @create_test_icon(i32, i32, i32, i32, i32, i32*, i32) #1

declare dso_local i32 @SetPixelV(i32, i32, i32, i32) #1

declare dso_local i32 @DrawStateA(i32, i32, i32*, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @GetPixel(i32, i32, i32) #1

declare dso_local i32 @ok(i32, i8*, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i64 @color_match(i32, i32) #1

declare dso_local i64 @broken(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
